[package]
name = "wamn-host"
description = "wamn custom wasmCloud host: wash-runtime + wamn:postgres / wamn:node plugins (S1 PoC)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wash-runtime = { workspace = true }
# Bench harness instantiates command components directly (CommandPre). Pinned
# to the exact rev wash-runtime's workspace uses so the graph keeps a single
# wasmtime; cargo unifies it with wash-runtime's own copy.
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", rev = "7535c0255b2b84f6ae4de6034649ba2eeda84173" }
# S6 testhostbench: the extended flowrunner imports wasi:http/outgoing-handler
# (the http-call node); the harness links it and reuses DefaultOutgoingHandler /
# HostFutureIncomingResponse to build the prod egress path and the test spy.
# Same git rev as wasmtime-wasi so the graph keeps a single wasmtime.
wasmtime-wasi-http = { git = "https://github.com/bytecodealliance/wasmtime", rev = "7535c0255b2b84f6ae4de6034649ba2eeda84173" }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time", "fs", "net", "io-util", "rt", "sync"] }
serde_json = "1"
tracing = { workspace = true }
# S5 wamn:logging plugin owns its OWN OTel LoggerProvider (generous batch queue
# -> OTLP gRPC -> collector -> Loki), independent of the vendored
# observability.rs pipeline (whose 2048 batch queue + log-level-tied filter
# bottleneck a 10k/s bench). Pinned to the exact 0.31 line wash-runtime uses so
# cargo unifies to a single crate instance (shared global meter provider).
opentelemetry = { version = "0.31", default-features = false, features = ["logs", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "logs"] }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
# S6 egress spy / prod handler: the HostHandler::outgoing_request signature is
# in terms of hyper::Request. Matches the hyper 1.x wasmtime-wasi-http uses.
hyper = "1"
# 4.1 apibench: build request bodies (Full<Bytes>) and collect the guest's
# HyperOutgoingBody response back into bytes (BodyExt::collect).
http-body-util = "0.1"
# 4.1 apibench: builds the gate's catalog snapshot + the 3.2 tenant-floor DDL
# for the ephemeral schema the api-gateway component queries.
wamn-catalog = { path = "../wamn-catalog" }
wamn-ddl = { path = "../wamn-ddl" }
# 5.14 queuebench: the pure SKIP LOCKED claim / lease / janitor SQL builders +
# decision logic the durable-queue gates drive over tokio_postgres.
wamn-run-queue = { path = "../wamn-run-queue" }
# wamn:postgres plugin (S2): thin driver + pool with explicit connection
# lifecycle (deadpool Object::take = destroy-never-repool on abnormal death).
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures-util = "0.3"
