[package]
name = "wamn-host"
description = "wamn production host: wash-runtime washlet + dispatcher + wamn:postgres / wamn:logging / wamn:node plugins (lib + thin binary; gates live in wamn-gates)"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wash-runtime = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true, features = ["time", "fs", "net", "io-util", "rt", "rt-multi-thread", "macros", "signal", "sync"] }
serde_json = "1"
tracing = { workspace = true }
# S5 wamn:logging plugin owns its OWN OTel LoggerProvider (generous batch queue
# -> OTLP gRPC -> collector -> Loki), independent of the vendored
# observability.rs pipeline (whose 2048 batch queue + log-level-tied filter
# bottleneck a 10k/s bench). Pinned to the exact 0.31 line wash-runtime uses so
# cargo unifies to a single crate instance (shared global meter provider).
opentelemetry = { version = "0.31", default-features = false, features = ["logs", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["logs"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "logs"] }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
bytes = "1"
# wamn-q3n.6 provision-org: the control-plane registry model — Org / Tier / the
# cluster-name derivation the org-pair renderer shares with the registry row, and
# the registry.orgs upsert SQL (SR2 single-source) the subcommand writes.
wamn-registry = { path = "../wamn-registry" }
# 5.14 dispatcher: holds the doorbell client (wash_runtime::washlet::connect_nats
# returns async_nats::Client). Same version req as wash-runtime's so cargo
# unifies to ONE crate instance (type identity) — the S5 OTel-crates pattern.
async-nats = { version = "0.47", default-features = false }
# The causation frame (Causation) the wamn:postgres plugin stamps on
# run-owned txns (l5i9.12.2); the wire contract crate.
wamn-event-wire = { path = "../wamn-event-wire" }
# wamn:postgres plugin (S2): thin driver + pool with explicit connection
# lifecycle (deadpool Object::take = destroy-never-repool on abnormal death).
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
deadpool-postgres = "0.14"
chrono = { version = "0.4", default-features = false, features = ["std"] }
futures-util = "0.3"
