[package]
name = "wamn-node-invoke"
version.workspace = true
edition.workspace = true
license.workspace = true

# The v0 custom-node invocation protocol (5.6 / wamn-bd5): the wire envelope the
# trusted flow-runner POSTs to a `serve-node` host, plus the warm-instance
# config-parse memoization (design-note 9b) and the per-step grant derivation.
# PURE — serde only, no DB / clock / wasm / network — so BOTH the flowrunner
# GUEST (wasm32-wasip2) and the serve-node HOST link the identical encode/decode
# and the wire shape cannot drift between the two ends.

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# runner->node authn (wamn-fqg.22): HMAC-SHA256 over the exact request body,
# hex-carried in a header. All pure Rust + wasm32-wasip2-clean (the guest signs,
# the host verifies) and already resolved in the workspace lock — hmac's
# `verify_slice` is the constant-time (subtle-backed) MAC check.
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
