[package]
name = "wamn-provision"
description = "wamn project provisioning (2.3): PURE Postgres SQL builders + identifier naming + per-project credential Secret rendering for standing up a per-project database on the shared cluster (D6: CloudNativePG, one shared Cluster, database-per-project). No DB / K8s client / clock — the `provision-project` subcommand (wamn-ctl) supplies the effects and the `provisionbench` gate (wamn-gates) drives it against a real cluster. Cross-project isolation = per-project DATABASE + per-DB CONNECT (PUBLIC revoked) + the shared NOSUPERUSER `wamn_app` role, with RLS confining within (the 2.2 model)."
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# The projects-file entry (the `WAMN_PG_PROJECTS_FILE` format the plugin's
# StaticCredentialProvider parses) and the per-project credential Secret render
# as JSON (kubectl apply accepts JSON manifests). No schemars — this is a
# provisioning tool, not a published contract.
serde_json = "1"

# wamn-q3n.6 provision-org: the org Cluster-PAIR renderer takes the registry's
# Org / Tier / Side vocabulary and derives cluster names via `cluster_name`, so
# the rendered clusters and the org's registry.orgs row name the same clusters.
# A lean pure→pure edge (wamn-registry deps serde + serde_json only) — unlike
# wamn-ddl, it pulls in no schemars/catalog closure.
wamn-registry = { path = "../wamn-registry" }

# NO DB / K8s / tokio / clock dependency: the builders are pure text and the
# renderers are pure JSON. The `provision-project` driver (wamn-ctl) holds the
# tokio_postgres connection; the optional live-apply gate (tests/provision.rs)
# shells out to `psql` — so there is no database dependency even in dev, the same
# pattern as wamn-ddl / wamn-rls / wamn-seed / wamn-run-store.
# The identifier/literal quoting helpers are inlined (2 lines each, mirroring the
# canonical `wamn_ddl::sql`) rather than pulling wamn-ddl's transitive closure
# (wamn-catalog + schemars) into this lean crate.

[dev-dependencies]
# Drift guard only (wamn-7nd.1): assert the inlined quote_ident/quote_literal stay
# byte-identical to the canonical wamn_ddl::sql::* that back the injection-safety
# argument. Dev-only, so the production dependency closure stays at serde_json.
wamn-ddl = { path = "../wamn-ddl" }
